# Cursovaia

./: .env_example  .flake8  .gitignore  README.md  pyproject.toml  user_settings.json
data/: operations.xlsx
src/: logger.py  main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py
